# model_serving

./: Dockerfile  pyproject.toml  requirements.txt  shell.sh
model_serving/: download_model.py  manage.py
model_serving/core/: apps.py  urls.py  views.py
model_serving/model_serving/: asgi.py  settings.py  urls.py  wsgi.py
